# qt-apps-qtauto-deployment-server

./: .gitignore  .qmake.conf  CMakeLists.txt  Dockerfile  LICENSE.GPLv3  README.md  docker-entrypoint.sh  docker-manage.sh  header.FDL-QTAS  header.GPL-QTAS  header.GPL3-PELAGICORE  manage.py  qtauto-deployment-server.pro  requirements.txt
appstore/: settings.py  urls.py  wsgi.py
doc/: QtAutoDeploymentServerDoc  qtautodeploymentserver-project.qdocconf  qtautodeploymentserver.qdocconf
doc/online/: qtautodeploymentserver.qdocconf
doc/src/: deployment-server-http-server-setup.qdoc  deployment-server-installation.qdoc  deployment-server-package-upload.qdoc  deployment-server-reference.qdoc  deployment-server.qdoc
store/: admin.py  api.py  authdecorators.py  models.py  osandarch.py  tags.py  utilities.py
store/management/commands/: expire-downloads.py  store-sign-package.py  store-upload-package.py  verify-upload-package.py
store/migrations/: 0001_initial.py  0002_alter_category_order.py
